// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sequence-artist draw cross mark to 1`] = `
{
  "mark": {
    "attrs": {},
    "children": [
      {
        "children": [
          {
            "attrs": {
              "stroke": "#3b4044",
            },
            "class": "sequence__actor__line",
            "type": "line",
          },
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "A",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-A",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "stroke": "#3b4044",
            },
            "class": "sequence__actor__line",
            "type": "line",
          },
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "B",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-B",
        "type": "group",
      },
      {
        "attrs": {},
        "children": [],
        "class": "sequence__activations",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "lineDash": [
                3,
                3,
              ],
              "lineWidth": 2,
              "stroke": "#3b4044",
            },
            "class": "sequence__message__line",
            "itemId": "message-0-4",
            "type": "line",
          },
          {
            "attrs": {
              "lineWidth": 2,
              "stroke": "#3b4044",
            },
            "type": "path",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "Message",
              "textAlign": "center",
              "textBaseline": "top",
            },
            "class": "sequence__message__text",
            "type": "text",
          },
        ],
        "class": "sequence__message",
        "itemId": "message-0-4",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "A",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-A",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "B",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-B",
        "type": "group",
      },
    ],
    "type": "group",
  },
}
`;

exports[`sequence-artist draw participant classifier 1`] = `
{
  "mark": {
    "attrs": {},
    "children": [
      {
        "children": [
          {
            "attrs": {
              "stroke": "#3b4044",
            },
            "class": "sequence__actor__line",
            "type": "line",
          },
          {
            "attrs": {},
            "mark": {
              "attrs": {},
              "children": [
                {
                  "attrs": {
                    "fill": "#fdb05e",
                    "lineWidth": 1.5,
                    "stroke": "#3b4044",
                  },
                  "type": "circle",
                },
                {
                  "attrs": {
                    "fill": null,
                    "lineWidth": 1.5,
                    "stroke": "#3b4044",
                  },
                  "type": "path",
                },
              ],
              "type": "group",
            },
            "type": "symbol",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "A",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-A",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "stroke": "#3b4044",
            },
            "class": "sequence__actor__line",
            "type": "line",
          },
          {
            "attrs": {},
            "mark": {
              "attrs": {},
              "children": [
                {
                  "attrs": {
                    "fill": "#fdb05e",
                    "stroke": "#3b4044",
                  },
                  "type": "path",
                },
                {
                  "attrs": {
                    "fill": "#fdb05e",
                    "stroke": "#3b4044",
                  },
                  "type": "ellipse",
                },
              ],
              "type": "group",
            },
            "type": "symbol",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "B",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-B",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "stroke": "#3b4044",
            },
            "class": "sequence__actor__line",
            "type": "line",
          },
          {
            "attrs": {},
            "mark": {
              "attrs": {},
              "children": [
                {
                  "attrs": {
                    "fill": "#fdb05e",
                    "stroke": "#3b4044",
                  },
                  "type": "path",
                },
              ],
              "type": "group",
            },
            "type": "symbol",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "C",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-C",
        "type": "group",
      },
      {
        "attrs": {},
        "children": [],
        "class": "sequence__activations",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {},
            "mark": {
              "attrs": {},
              "children": [
                {
                  "attrs": {
                    "fill": "#fdb05e",
                    "lineWidth": 1.5,
                    "stroke": "#3b4044",
                  },
                  "type": "circle",
                },
                {
                  "attrs": {
                    "fill": null,
                    "lineWidth": 1.5,
                    "stroke": "#3b4044",
                  },
                  "type": "path",
                },
              ],
              "type": "group",
            },
            "type": "symbol",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "A",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-A",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {},
            "mark": {
              "attrs": {},
              "children": [
                {
                  "attrs": {
                    "fill": "#fdb05e",
                    "stroke": "#3b4044",
                  },
                  "type": "path",
                },
                {
                  "attrs": {
                    "fill": "#fdb05e",
                    "stroke": "#3b4044",
                  },
                  "type": "ellipse",
                },
              ],
              "type": "group",
            },
            "type": "symbol",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "B",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-B",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {},
            "mark": {
              "attrs": {},
              "children": [
                {
                  "attrs": {
                    "fill": "#fdb05e",
                    "stroke": "#3b4044",
                  },
                  "type": "path",
                },
              ],
              "type": "group",
            },
            "type": "symbol",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "C",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-C",
        "type": "group",
      },
    ],
    "type": "group",
  },
}
`;

exports[`sequence-artist match example snapshot 1`] = `
{
  "mark": {
    "attrs": {},
    "children": [
      {
        "attrs": {
          "lineDash": [
            2,
            2,
          ],
          "lineWidth": 2,
          "stroke": "#fdb05e",
        },
        "type": "rect",
      },
      {
        "children": [
          {
            "attrs": {
              "stroke": "#3b4044",
            },
            "class": "sequence__actor__line",
            "type": "line",
          },
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "User",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-User",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "stroke": "#3b4044",
            },
            "class": "sequence__actor__line",
            "type": "line",
          },
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "Pintora",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-Pintora",
        "type": "group",
      },
      {
        "attrs": {},
        "children": [
          {
            "attrs": {
              "anchor": "start",
              "fill": "#f8f8f2",
              "stroke": "#3b4044",
            },
            "class": "sequence__activation",
            "type": "rect",
          },
        ],
        "class": "sequence__activations",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "lineWidth": 2,
              "stroke": "#3b4044",
            },
            "class": "sequence__message__line",
            "itemId": "message-0-0",
            "type": "line",
          },
          {
            "attrs": {
              "fill": "#3b4044",
            },
            "type": "path",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "render this",
              "textAlign": "center",
              "textBaseline": "top",
            },
            "class": "sequence__message__text",
            "type": "text",
          },
          {
            "attrs": {},
            "children": [
              {
                "attrs": {
                  "fill": "#3b4044",
                  "stroke": "#3b4044",
                  "symbol": "circle",
                },
                "type": "marker",
              },
              {
                "attrs": {
                  "fill": "#fdb05e",
                  "fontWeight": "bold",
                  "text": "1",
                  "textAlign": "center",
                  "textBaseline": "middle",
                },
                "class": "sequence__number",
                "type": "text",
              },
            ],
            "type": "group",
          },
        ],
        "class": "sequence__message",
        "itemId": "message-0-0",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "lineDash": [
                3,
                3,
              ],
              "lineWidth": 2,
              "stroke": "#3b4044",
            },
            "class": "sequence__message__line",
            "itemId": "message-3-1",
            "type": "path",
          },
          {
            "attrs": {
              "fill": "#3b4044",
            },
            "type": "path",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "Has input changed?",
              "textAlign": "center",
              "textBaseline": "top",
            },
            "class": "sequence__message__text",
            "type": "text",
          },
          {
            "attrs": {},
            "children": [
              {
                "attrs": {
                  "fill": "#3b4044",
                  "stroke": "#3b4044",
                  "symbol": "circle",
                },
                "type": "marker",
              },
              {
                "attrs": {
                  "fill": "#fdb05e",
                  "fontWeight": "bold",
                  "text": "2",
                  "textAlign": "center",
                  "textBaseline": "middle",
                },
                "class": "sequence__number",
                "type": "text",
              },
            ],
            "type": "group",
          },
        ],
        "class": "sequence__message",
        "itemId": "message-3-1",
        "type": "group",
      },
      {
        "attrs": {},
        "children": [
          {
            "attrs": {
              "fill": "#fdb05e",
              "stroke": "#fdb05e",
            },
            "class": "loop__label-box",
            "type": "polygon",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontWeight": 400,
              "text": "loop",
              "textBaseline": "top",
            },
            "class": "label-text",
            "type": "text",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontWeight": 400,
              "text": "[Check input]",
              "textAlign": "center",
              "textBaseline": "top",
            },
            "class": "loop__title",
            "type": "text",
          },
        ],
        "class": "loop",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "lineDash": [
                3,
                3,
              ],
              "lineWidth": 2,
              "stroke": "#3b4044",
            },
            "class": "sequence__message__line",
            "itemId": "message-5-1",
            "type": "line",
          },
          {
            "attrs": {
              "fill": "#3b4044",
            },
            "type": "path",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "your figure here",
              "textAlign": "center",
              "textBaseline": "top",
            },
            "class": "sequence__message__text",
            "type": "text",
          },
          {
            "attrs": {},
            "children": [
              {
                "attrs": {
                  "fill": "#3b4044",
                  "stroke": "#3b4044",
                  "symbol": "circle",
                },
                "type": "marker",
              },
              {
                "attrs": {
                  "fill": "#fdb05e",
                  "fontWeight": "bold",
                  "text": "3",
                  "textAlign": "center",
                  "textBaseline": "middle",
                },
                "class": "sequence__number",
                "type": "text",
              },
            ],
            "type": "group",
          },
        ],
        "class": "sequence__message",
        "itemId": "message-5-1",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "anchor": "start",
              "fill": "#F8EA75",
              "stroke": "#3b4044",
            },
            "class": "note__bg",
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "note over",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "note sequence__note",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "anchor": "start",
              "fill": "#F8EA75",
              "stroke": "#3b4044",
            },
            "class": "note__bg",
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "note aside actor",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "note sequence__note",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "anchor": "start",
              "fill": "#F8EA75",
              "stroke": "#3b4044",
            },
            "class": "note__bg",
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "multiline note
is possible",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "note sequence__note",
        "type": "group",
      },
      {
        "attrs": {},
        "children": [
          {
            "attrs": {
              "stroke": "#3b4044",
            },
            "type": "line",
          },
          {
            "attrs": {
              "stroke": "#3b4044",
            },
            "type": "line",
          },
          {
            "attrs": {
              "fill": "#f8f8f2",
              "lineWidth": 2,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 600,
              "text": "Divider",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "divider",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "User",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-User",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "Pintora",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-Pintora",
        "type": "group",
      },
      {
        "attrs": {
          "fill": "#3b4044",
          "fontFamily": "Source Code Pro, sans-serif",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "bold",
          "text": "Sequence Diagram Example",
          "textAlign": "center",
        },
        "class": "sequence__title",
        "type": "text",
      },
    ],
    "type": "group",
  },
}
`;

exports[`sequence-artist will render boxes 1`] = `
{
  "mark": {
    "attrs": {},
    "children": [
      {
        "attrs": {},
        "children": [
          {
            "attrs": {
              "fill": "#d6d3fa",
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "bold",
              "text": "group participants",
              "textAlign": "center",
              "textBaseline": "top",
            },
            "type": "text",
          },
        ],
        "class": "sequence__participant-boxes",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "stroke": "#3b4044",
            },
            "class": "sequence__actor__line",
            "type": "line",
          },
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "Alice",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-A",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "stroke": "#3b4044",
            },
            "class": "sequence__actor__line",
            "type": "line",
          },
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "B",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-B",
        "type": "group",
      },
      {
        "attrs": {},
        "children": [],
        "class": "sequence__activations",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "Alice",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-A",
        "type": "group",
      },
      {
        "children": [
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": 400,
              "text": "B",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "sequence__actor",
        "itemId": "actor-B",
        "type": "group",
      },
    ],
    "type": "group",
  },
}
`;
